--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,5 @@ AI_EFFORT=medium
 AI_API_KEY=
 # Hooks to connect to a local app dev server
 PUBLIC_DEV_SERVER=false
+EVM_SEED_PHRASE=
+PUBLIC_EVM=
