--- a/.env.example
+++ b/.env.example
@@ -58,3 +58,5 @@ AI_PROVIDER=anthropic
 AI_MODEL=claude-sonnet-4-20250514
 AI_EFFORT=medium
 AI_API_KEY=
+# Hooks to connect to a local app dev server
+PUBLIC_DEV_SERVER=false
