export only server

--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "type": "module",
   "main": "index.node.js",
   "types": "index.d.ts",
+  "files": [
+    "build/**",
+    "index.node.js",
+    "index.d.ts",
+    "types/**",
+    "README.md",
+    "LICENSE"
+  ],
   "exports": {
     ".": {
       "import": "./index.node.js",
