fix: npx command wasnt properly starting a game server

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "files": [
     "build/**",
     "index.node.js",
+    "index.node-client.js",
     "index.d.ts",
+    "index.node-client.d.ts",
     "types/**",
     "bin/**",
     "README.md",
@@ -15,9 +17,16 @@
   ],
   "exports": {
     ".": {
+      "types": "./index.d.ts",
       "import": "./index.node.js",
       "require": "./index.node.js",
       "default": "./index.node.js"
+    },
+    "./node-client": {
+      "types": "./index.node-client.d.ts",
+      "import": "./index.node-client.js",
+      "require": "./index.node-client.js",
+      "default": "./index.node-client.js"
     },
     "./app-runtime": "./types/app-runtime.d.ts"
   },
