--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-# The world folder to run
-WORLD=world
+# The URL of the world server
+WORLD_URL=http://localhost:5000
 
-# The port the server runs on 
-PORT=3000
+# The world id (local worlds should start with local-)
+WORLD_ID=local-xxxxxxxxxx
+
+# The port the server runs on
+PORT=5000
 
 # The secret the server uses to create/parse json web tokens
 JWT_SECRET=hyper
@@ -22,14 +25,14 @@ PUBLIC_PLAYER_COLLISION=false
 PUBLIC_MAX_UPLOAD_SIZE=12
 
 # The public web socket url the client connects to
-PUBLIC_WS_URL=ws://localhost:3000/ws
+PUBLIC_WS_URL=ws://localhost:5000/ws
 
 # The public url used by clients to access api (eg upload assets)
-PUBLIC_API_URL=http://localhost:3000/api
+PUBLIC_API_URL=http://localhost:5000/api
 
 # How assets are stored, fetched and uploaded (local or s3)
 ASSETS=local
-ASSETS_BASE_URL=http://localhost:3000/assets
+ASSETS_BASE_URL=http://localhost:5000/assets
 ASSETS_S3_URI=
 
 # By default world data is stored in a local sqlite database in the world folder
