--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gamedev",
-  "version": "0.0.1-alpha.0",
+  "version": "0.0.2-alpha.0",
   "type": "module",
   "main": "index.node.js",
   "types": "index.d.ts",
@@ -31,9 +31,9 @@
     },
     "./app-runtime": "./types/app-runtime.d.ts"
   },
-  "homepage": "https://github.com/hyperfy-xyz/hyperfy#readme",
+  "homepage": "https://github.com/lobby-ws/gamedev#readme",
   "bugs": {
-    "url": "https://github.com/hyperfy-xyz/hyperfy/issues"
+    "url": "https://github.com/lobby-ws/gamedev/issues"
   },
   "keywords": [
     "hyperfy",
