imp: add claude.md to projects folder and docs

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ WORLD_ID=local-xxxxxxxxxx
 
 # The port the server runs on
 PORT=5000
+WORLD=world
 
 # The secret the server uses to create/parse json web tokens
 JWT_SECRET=hyper
