--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "files": [
     "build/**",
     "app-server/**",
+    "docs/**",
     "src/core/packets.js",
     "index.node.js",
     "index.node-client.js",
