--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "lint:fix": "eslint . --ext .js,.jsx --fix",
     "format": "prettier --write .",
     "check": "npm run lint && npm run format",
-    "test": "node --test \"test/integration/**/*.test.js\"",
-    "test:integration": "node --test \"test/integration/**/*.test.js\""
+    "test": "node --test --loader ./scripts/node-esm-loader.mjs \"test/integration/**/*.test.js\"",
+    "test:integration": "node --test --loader ./scripts/node-esm-loader.mjs \"test/integration/**/*.test.js\""
   },
   "bin": {
     "gamedev": "bin/gamedev.mjs"
@@ -104,6 +104,7 @@
     "react": "^19.1.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^19.1.0",
+    "acorn": "^8.15.0",
     "ses": "^1.10.0",
     "source-map-support": "^0.5.21",
     "three": "^0.173.0",
