--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "gamedev": "bin/gamedev.mjs"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.18",
     "@aws-sdk/client-s3": "^3.859.0",
     "@fastify/compress": "^8.0.1",
     "@fastify/cors": "^10.0.1",
@@ -80,6 +81,9 @@
     "@firebolt-dev/jsx": "^0.4.3",
     "@nktkas/hyperliquid": "0.30.2",
     "@pixiv/three-vrm": "^3.3.3",
+    "@tanstack/react-query": "^5.90.2",
+    "acorn": "^8.15.0",
+    "ai": "^6.0.49",
     "better-sqlite3": "^11.7.2",
     "d3": "^7.9.0",
     "dotenv-flow": "^4.1.0",
@@ -104,8 +108,8 @@
     "react": "^19.1.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^19.1.0",
-    "acorn": "^8.15.0",
     "ses": "^1.10.0",
+    "siwe": "^2.3.2",
     "source-map-support": "^0.5.21",
     "three": "^0.173.0",
     "three-mesh-bvh": "^0.8.3",
