--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gamedev",
-  "version": "0.0.4-alpha.4",
+  "version": "0.0.5",
   "type": "module",
   "main": "index.node.js",
   "types": "index.d.ts",
