--- a/.env.example
+++ b/.env.example
@@ -49,6 +49,17 @@ LIVEKIT_WS_URL=
 LIVEKIT_API_KEY=
 LIVEKIT_API_SECRET=
 
+# AI script generation (optional)
+# Supported providers: openai, anthropic
+AI_PROVIDER=
+AI_MODEL=
+AI_API_KEY=
+AI_EFFORT=low
+
+# Safe rollout switch for multi-step tool loop + docs search tool.
+# false keeps single-step generation behavior.
+AI_TOOL_LOOP_ENABLED=false
+
 # Hooks to connect to a local app dev server
 PUBLIC_DEV_SERVER=false
 
