--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# ONLY ON PLATFORM. REQUIRED BUT AUTOMATICALLY GENERATED ON WORLD CREATION
+DEPLOYMENT_ID=xxxxxxxxxx
+
 # The URL of the world server
 WORLD_URL=http://localhost:3000
 
@@ -30,6 +33,16 @@ PUBLIC_WS_URL=ws://localhost:3000/ws
 
 # The public url used by clients to access api (eg upload assets)
 PUBLIC_API_URL=http://localhost:3000/api
+
+# Optional auth base URL (no /api)
+PUBLIC_AUTH_URL=
+
+# Optional direct WSS/TLS settings.
+# If TLS_CERT_PATH and TLS_KEY_PATH are set, server runs HTTPS.
+# If DIRECT_WSS_PORT is also set, PORT stays HTTP and DIRECT_WSS_PORT serves HTTPS/WSS.
+DIRECT_WSS_PORT=
+TLS_CERT_PATH=
+TLS_KEY_PATH=
 
 # How assets are stored, fetched and uploaded (local or s3)
 ASSETS=local
