Squashed commit of the following:
commit 234d8418430f9856e18e5b9f068a4fa4a95c97d9
Author: peezy <itspeezy@protonmail.com>
Date:   Tue Feb 10 16:56:59 2026 -0300

    cleanup envs vars

commit 502d8a9f604d20bef7967edb530eb982c6c75851
Author: peezy <itspeezy@protonmail.com>
Date:   Tue Feb 10 12:46:58 2026 -0300

    chore(plan): mark PR-13 completed

commit d7bb5c5aca1c810b5715ad47855dacffacd74239
Author: peezy <itspeezy@protonmail.com>
Date:   Tue Feb 10 12:46:38 2026 -0300

    PR-13: add smoke matrix script and mode env runbook

commit a188210dd0c4d984213ef4b69d9ebb246dfd80de
Author: peezy <itspeezy@protonmail.com>
Date:   Tue Feb 10 12:44:12 2026 -0300

    chore(plan): mark PR-12 completed

commit 856468a5ac4b67e9f4089475118583ed20a27613
Author: peezy <itspeezy@protonmail.com>
Date:   Tue Feb 10 12:43:47 2026 -0300

    PR-12: wire platform presence and heartbeat to world-service

commit 9976ef6c04b362c51201d8c3c2eed6e99c1bda8c
Author: peezy <itspeezy@protonmail.com>
Date:   Tue Feb 10 12:40:05 2026 -0300

    chore(plan): mark PR-11 completed

commit 763e7ee99355bbdfb305dc4bf8cc06fb94927ab7
Author: peezy <itspeezy@protonmail.com>
Date:   Tue Feb 10 12:39:24 2026 -0300

    PR-11: update client flow for standalone lobby exchange

commit f0b5429745dcbaa0c2cf8006e6cc7d6d0ec83dc7
Author: peezy <itspeezy@protonmail.com>
Date:   Tue Feb 10 12:37:31 2026 -0300

    chore(plan): mark PR-10 completed

commit dc103fe3d36cdef835644c61c43859e3dcb53869
Author: peezy <itspeezy@protonmail.com>
Date:   Tue Feb 10 12:37:06 2026 -0300

    PR-10: add runtime exchange endpoint for standalone lobby auth

commit 383966d5a7c9f83533acb655e4ceda91cb0c1047
Author: peezy <itspeezy@protonmail.com>
Date:   Tue Feb 10 12:33:40 2026 -0300

    chore(plan): mark PR-09 completed

commit 1ab1fd27881590fa0d9436df7aee2a1a75c4d71d
Author: peezy <itspeezy@protonmail.com>
Date:   Tue Feb 10 12:31:27 2026 -0300

    chore(plan): mark PR-08 completed

commit e6274524ffa7d25c35f46f6c61c0731c9f9de474
A

--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "format": "prettier --write .",
     "check": "npm run lint && npm run format",
     "test": "node --test --loader ./scripts/node-esm-loader.mjs \"test/integration/**/*.test.js\"",
-    "test:integration": "node --test --loader ./scripts/node-esm-loader.mjs \"test/integration/**/*.test.js\""
+    "test:integration": "node --test --loader ./scripts/node-esm-loader.mjs \"test/integration/**/*.test.js\"",
+    "smoke:matrix": "node scripts/smoke-mode-matrix.mjs"
   },
   "bin": {
     "gamedev": "bin/gamedev.mjs"
