--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,16 @@
-# ONLY ON PLATFORM. REQUIRED BUT AUTOMATICALLY GENERATED ON WORLD CREATION
-DEPLOYMENT_ID=xxxxxxxxxx
+# Optional legacy alias for WORLD_ID (platform sets this to WORLD_ID for compatibility)
+DEPLOYMENT_ID=
 
 # The URL of the world server
 WORLD_URL=http://localhost:3000
 
 # The world id (local worlds should start with local-)
 WORLD_ID=local-xxxxxxxxxx
+
+# Runtime auth mode:
+# - standalone: self-host runtime auth flow
+# - platform: world-service issues connection tokens and runtime validates them
+AUTH_MODE=standalone
 
 # The port the server runs on
 PORT=3000
@@ -28,14 +33,26 @@ PUBLIC_PLAYER_COLLISION=false
 # The maximum upload file size for models etc (mb)
 PUBLIC_MAX_UPLOAD_SIZE=12
 
-# The public web socket url the client connects to
-PUBLIC_WS_URL=ws://localhost:3000/ws
-
 # The public url used by clients to access api (eg upload assets)
 PUBLIC_API_URL=http://localhost:3000/api
 
-# Optional auth base URL (no /api)
+# Optional public websocket URL. If unset, runtime derives it from PUBLIC_API_URL.
+PUBLIC_WS_URL=ws://localhost:3000/ws
+
+# Optional auth base URL for standalone+lobby identity mode.
+# Leave unset for pure standalone local identity mode.
 PUBLIC_AUTH_URL=
+
+# Runtime session token TTL (seconds)
+RUNTIME_SESSION_TTL_SECONDS=604800
+
+# Required only when AUTH_MODE=platform
+# Optional override. Defaults to PUBLIC_API_URL.
+WORLD_SERVICE_INTERNAL_URL=
+WORLD_SERVICE_API_KEY=
+WORLD_SERVICE_HEARTBEAT_INTERVAL_MS=15000
+WORLD_SERVICE_RETRY_BASE_MS=400
+WORLD_SERVICE_MAX_RETRIES=3
 
 # Optional direct WSS/TLS settings.
 # If TLS_CERT_PATH and TLS_KEY_PATH are set, server runs HTTPS.
