start auth mode cleanup

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ WORLD_URL=http://localhost:3000
 WORLD_ID=local-xxxxxxxxxx
 
 # Runtime auth mode:
-# - standalone: self-host runtime auth flow
-# - platform: world-service issues connection tokens and runtime validates them
+# - standalone: self-host runtime auth flow (preferred)
+# - platform: legacy/integration mode that validates world-service connection tokens
 AUTH_MODE=standalone
 
 # The port the server runs on
@@ -46,10 +46,11 @@ PUBLIC_AUTH_URL=
 # Runtime session token TTL (seconds)
 RUNTIME_SESSION_TTL_SECONDS=604800
 
-# Required only when AUTH_MODE=platform
-# Optional override. Defaults to PUBLIC_API_URL.
+# Legacy / optional: used only for AUTH_MODE=platform compatibility.
 WORLD_SERVICE_INTERNAL_URL=
+# Legacy / optional: API key for runtime -> world-service internal API integration.
 WORLD_SERVICE_API_KEY=
+# Legacy / optional: heartbeat/retry controls for the legacy internal runtime integration.
 WORLD_SERVICE_HEARTBEAT_INTERVAL_MS=15000
 WORLD_SERVICE_RETRY_BASE_MS=400
 WORLD_SERVICE_MAX_RETRIES=3
