remove auth modes

--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,6 @@ WORLD_URL=http://localhost:3000
 # The world id (local worlds should start with local-)
 WORLD_ID=local-xxxxxxxxxx
 
-# Runtime auth mode:
-# - standalone: self-host runtime auth flow (preferred)
-# - platform: legacy/integration mode that validates world-service connection tokens
-AUTH_MODE=standalone
-
 # The port the server runs on
 PORT=3000
 WORLD=world
@@ -39,21 +34,13 @@ PUBLIC_API_URL=http://localhost:3000/api
 # Optional public websocket URL. If unset, runtime derives it from PUBLIC_API_URL.
 PUBLIC_WS_URL=ws://localhost:3000/ws
 
-# Optional auth base URL for standalone+lobby identity mode.
-# Leave unset for pure standalone local identity mode.
+# Optional auth base URL for lobby identity mode.
+# Set for signed-in Lobby identity flow.
+# Leave unset for pure local identity mode.
 PUBLIC_AUTH_URL=
 
 # Runtime session token TTL (seconds)
 RUNTIME_SESSION_TTL_SECONDS=604800
-
-# Legacy / optional: used only for AUTH_MODE=platform compatibility.
-WORLD_SERVICE_INTERNAL_URL=
-# Legacy / optional: API key for runtime -> world-service internal API integration.
-WORLD_SERVICE_API_KEY=
-# Legacy / optional: heartbeat/retry controls for the legacy internal runtime integration.
-WORLD_SERVICE_HEARTBEAT_INTERVAL_MS=15000
-WORLD_SERVICE_RETRY_BASE_MS=400
-WORLD_SERVICE_MAX_RETRIES=3
 
 # Optional direct WSS/TLS settings.
 # If TLS_CERT_PATH and TLS_KEY_PATH are set, server runs HTTPS.
