--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@firebolt-dev/css": "^0.4.3",
     "@firebolt-dev/jsx": "^0.4.3",
     "@nktkas/hyperliquid": "0.30.2",
+    "@privy-io/react-auth": "^3.13.1",
     "@pixiv/three-vrm": "^3.3.3",
     "@tanstack/react-query": "^5.90.2",
     "acorn": "^8.15.0",
